@@ -37,10 +37,12 @@ extern volatile uint32_t *gp2x_regs;	// 32-bit version of the MMSP2 registers, f
 #endif
 
 enum {
-	PERF_DISPLAY,  //  0
-	PERF_POLY,     // 25
-	PERF_POLY_DRAW,// 74
-	PERF_DIV,      //
+	PERF_DISPLAY,
+	PERF_POLY,
+	PERF_POLY_DRAW,
+	PERF_DIV,
+	PERF_CLIP,
+	PERF_WAITCMD,
 };
 
 typedef struct {
